--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "DataMatrix.NET"]
 	path = DataMatrix.NET
 	url = https://github.com/zaxrist/DataMatrix.NET.git
+[submodule "QRCoder"]
+	path = QRCoder
+	url = https://github.com/zaxrist/QRCoder.git
